--- a/css/authentication-form.css
+++ b/css/authentication-form.css
@@ -12,6 +12,8 @@ body {
 
 .content {
   padding: 30px;
+  display: flex;
+  gap: 30px;
 }
 
 h2 {
@@ -22,11 +24,17 @@ p {
   font-weight: bold;
 }
 
+select {
+  height: 30px;
+  width: auto;
+}
+
 /* 👇👇👇  ADD YOUR FORM STYLES BENEATH  👇👇👇*/
 
 form {
   border: 1px solid #a9a9a9;
   padding: 20px;
+  width: auto;
 }
 
 .subtext {
@@ -34,9 +42,50 @@ form {
   font-weight: unset;
 }
 
-#sign-in,
+#sign-in, #sign-in-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 700px;
+}
+
+.form-checkbox-control {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.form-submit-control {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+#sign-in {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#sign-up, #sign-up-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 650px;
+}
+
 #sign-up {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-input-control {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  font-weight: bold;
 }
 
 a {
@@ -45,13 +94,17 @@ a {
 }
 
 label {
-  font-weight: bold;
+ display: flex;
+ flex-direction: column;
 }
 
 input {
   width: 100%;
   height: 30px;
   padding: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 input[type="checkbox"],
@@ -74,6 +127,8 @@ input[type="submit"] {
   outline: none;
   clear: left;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
 
 input[type="submit"]:hover {
@@ -82,4 +137,32 @@ input[type="submit"]:hover {
 
 .form select {
   height: 30px;
+}
+
+#state, #city {
+  width: 290px;
+  display: flex;
+  gap: 50px;
+}
+
+.form-header {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.form-group-horizontal-control {
+  display: flex;
+  gap: 30px;
+}
+
+.form-radio-control {
+  display: flex;
+  gap: 6px;
+}
+
+.gender-input {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
